<resources>
    <string name="app_name" translatable="false">scrcpy-lite</string>

    <string name="help_wireless_debug">To use scrcpy-lite, enable wireless debugging on the remote device.\nADB: adb tcpip 5555\n\nIf in landscape, scroll down.</string>

    <string name="label_server_ip">Remote device IP address</string>
    <string name="hint_server_ip">Example: 192.168.0.73</string>

    <string name="label_video_resolution">Resolution</string>
    <string name="label_video_resolution_desc">Streaming resolution (affects quality and latency)</string>

    <string name="label_video_bitrate">Bitrate</string>
    <string name="label_video_bitrate_desc">Bitrate (affects quality and latency)</string>

    <string name="label_x" translatable="false">x</string>
    <string name="action_start">Start</string>

    <string name="status_connecting">Connecting...</string>
    <string name="status_connecting_adb">Connecting (ADB)...</string>
    <string name="status_opening_shell">Opening shell...</string>
    <string name="status_waiting_shell">Waiting for shell prompt...</string>
    <string name="status_pushing_server">Pushing server...</string>
    <string name="status_starting_server">Starting server...</string>

    <string name="error_invalid_ip">Invalid IP address</string>
    <string name="error_cancelled">Cancelled</string>
    <string name="error_adb_invalid_host">Invalid host</string>
    <string name="error_adb_connection_refused">ADB connection refused</string>
    <string name="error_adb_no_route">No route to host</string>
    <string name="error_adb_timeout">ADB timeout</string>
    <string name="error_adb_io">ADB I/O error</string>
    <string name="error_connection_failed">Network or ADB connection failed</string>
    <string name="error_connection_timeout">Connection timed out</string>
    <string name="error_server_address_empty">Server address is empty</string>
    <string name="press_again_to_exit">Press again to exit</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_close">Close</string>

    <string name="menu_title">Menu</string>

    <string name="menu_reconnect_stream">Reconnect (stream only)</string>
    <string name="menu_redeploy_reconnect">Redeploy and reconnect</string>
    <string name="menu_disconnect">Disconnect and return</string>

    <string name="menu_key_back">Remote: Back</string>
    <string name="menu_key_home">Remote: Home</string>
    <string name="menu_key_recents">Remote: Recents</string>
    <string name="menu_key_power">Remote: Power</string>
    <string name="menu_key_volume_up">Remote: Volume +</string>
    <string name="menu_key_volume_down">Remote: Volume -</string>
    <string name="menu_key_mute">Remote: Mute</string>

    <string name="menu_open_launcher">Launcher</string>

    <string name="menu_toggle_nav">Show nav bar</string>
    <string name="menu_toggle_control">Control enabled</string>
    <string name="menu_toggle_clipboard_sync">Clipboard sync</string>

    <string name="menu_clipboard_pull_remote">Clipboard: Pull from remote</string>
    <string name="menu_clipboard_paste_local">Clipboard: Paste local to remote</string>
    <string name="menu_soft_keyboard">Input text...</string>

    <string name="toast_control_disabled">Control disabled</string>
    <string name="toast_not_connected">Not connected</string>
    <string name="toast_clipboard_sync_enabled">Clipboard sync enabled</string>
    <string name="toast_clipboard_sync_disabled">Clipboard sync disabled</string>
    <string name="toast_remote_clipboard_empty">Remote clipboard empty</string>
    <string name="toast_clipboard_updated">Clipboard updated</string>
    <string name="toast_clipboard_pull_failed">Failed to pull clipboard</string>
    <string name="toast_local_clipboard_empty">Local clipboard empty</string>
    <string name="toast_pasted">Pasted</string>
    <string name="hint_input_text">Input text</string>
    <string name="toast_server_address_missing">Server address missing</string>
    <string name="toast_failed_load_apps">Failed to load apps</string>
    <string name="toast_failed_start_app">Failed to start app</string>

    <string name="launcher_search_hint">Search apps</string>
    <string name="launcher_icon_desc">App icon</string>
    <string name="appswitch_button" translatable="false">=</string>
    <string name="home_button" translatable="false">o</string>
    <string name="back_button" translatable="false">v</string>
    <string name="switch1">Nav Bar  (check this if remote device does not have on-screen nav bar)</string>
    <string name="switch2">Amlogic Device Dedicated Mode</string>



    <string-array name="options_resolution_values">
        <item>1920x1080</item>
        <item>1600x720</item>
        <item>1280x720</item>
        <item>1200x540</item>
        <item>960x720</item>
        <item>800x448</item>
        <item>640x360</item>
    </string-array>

    <string-array name="options_bitrate_keys">
        <item>6 Mbps</item>
        <item>4 Mbps</item>
        <item>2 Mbps</item>
        <item>1 Mbps</item>
    </string-array>

    <integer-array name="options_bitrate_values">
        <item>6144000</item>
        <item>4096000</item>
        <item>2048000</item>
        <item>1024000</item>
    </integer-array>

</resources>
